src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AMID4__c</fullName>
        <label>AMID4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMID__c</fullName>
        <externalId>true</externalId>
        <label>AMID2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_18_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Code__c</fullName>
        <displayFormat>CSI{000000000}</displayFormat>
        <label>Account Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Id</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Latin_Capture__c</fullName>
        <label>Account Name Latin Capture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alliance_Partner_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alliance Partner Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Relationship__c</fullName>
        <label>Business Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <inlineHelpText>NEC (NEC); 
BR (The Belt and Road);
WW (World Wide);
SEA  (South East Asia);</inlineHelpText>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>WW</fullName>
                </value>
                <value>
                    <fullName>SEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C900_Blacklist__c</fullName>
        <label>C900 Blacklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C900</fullName>
                </value>
                <value>
                    <fullName>C911</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRS_ID_TJ__c</fullName>
        <label>CRS ID TJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_ID__c</fullName>
        <label>CRS ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>China</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_District__c</fullName>
        <label>District(del)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Email__c</fullName>
        <label>Email(del)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Line__c</fullName>
        <label>Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_PinCode__c</fullName>
        <label>Pin Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_zip__c</fullName>
        <label>ZIP</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel Partner Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_Id__c</fullName>
        <label>City ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>101</fullName>
                </value>
                <value>
                    <fullName>102</fullName>
                </value>
                <value>
                    <fullName>103</fullName>
                </value>
                <value>
                    <fullName>104</fullName>
                </value>
                <value>
                    <fullName>105</fullName>
                </value>
                <value>
                    <fullName>106</fullName>
                </value>
                <value>
                    <fullName>108</fullName>
                </value>
                <value>
                    <fullName>109</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>111</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>113</fullName>
                </value>
                <value>
                    <fullName>114</fullName>
                </value>
                <value>
                    <fullName>115</fullName>
                </value>
                <value>
                    <fullName>116</fullName>
                </value>
                <value>
                    <fullName>117</fullName>
                </value>
                <value>
                    <fullName>118</fullName>
                </value>
                <value>
                    <fullName>119</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>121</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>123</fullName>
                </value>
                <value>
                    <fullName>124</fullName>
                </value>
                <value>
                    <fullName>125</fullName>
                </value>
                <value>
                    <fullName>126</fullName>
                </value>
                <value>
                    <fullName>127</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Province__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>安徽-安庆</fullName>
                </value>
                <value>
                    <fullName>安徽-蚌埠</fullName>
                </value>
                <value>
                    <fullName>安徽-亳州</fullName>
                </value>
                <value>
                    <fullName>安徽-巢湖</fullName>
                </value>
                <value>
                    <fullName>安徽-池州</fullName>
                </value>
                <value>
                    <fullName>安徽-滁州</fullName>
                </value>
                <value>
                    <fullName>安徽-阜阳</fullName>
                </value>
                <value>
                    <fullName>安徽-合肥</fullName>
                </value>
                <value>
                    <fullName>安徽-淮北</fullName>
                </value>
                <value>
                    <fullName>安徽-淮南</fullName>
                </value>
                <value>
                    <fullName>安徽-黄山</fullName>
                </value>
                <value>
                    <fullName>安徽-六安</fullName>
                </value>
                <value>
                    <fullName>安徽-马鞍山</fullName>
                </value>
                <value>
                    <fullName>安徽-其它城市</fullName>
                </value>
                <value>
                    <fullName>安徽-铜陵</fullName>
                </value>
                <value>
                    <fullName>安徽-芜湖</fullName>
                </value>
                <value>
                    <fullName>安徽-宣城</fullName>
                </value>
                <value>
                    <fullName>北京市</fullName>
                </value>
                <value>
                    <fullName>福建-东山</fullName>
                </value>
                <value>
                    <fullName>福建-福清</fullName>
                </value>
                <value>
                    <fullName>福建-福州</fullName>
                </value>
                <value>
                    <fullName>福建-晋江</fullName>
                </value>
                <value>
                    <fullName>福建-龙岩</fullName>
                </value>
                <value>
                    <fullName>福建-马尾</fullName>
                </value>
                <value>
                    <fullName>福建-南平</fullName>
                </value>
                <value>
                    <fullName>福建-宁德</fullName>
                </value>
                <value>
                    <fullName>福建-莆田</fullName>
                </value>
                <value>
                    <fullName>福建-其它城市</fullName>
                </value>
                <value>
                    <fullName>福建-泉州</fullName>
                </value>
                <value>
                    <fullName>福建-三明</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Case__c</fullName>
        <label>Created By Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTA__c</fullName>
        <label>DTA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>East-ACQ</fullName>
                </value>
                <value>
                    <fullName>South-ACQ</fullName>
                </value>
                <value>
                    <fullName>North-ACQ</fullName>
                </value>
                <value>
                    <fullName>West-ACQ</fullName>
                </value>
                <value>
                    <fullName>South-ACQ-BOT</fullName>
                </value>
                <value>
                    <fullName>East-ACQ-BOT</fullName>
                </value>
                <value>
                    <fullName>North-ACQ-BOT</fullName>
                </value>
                <value>
                    <fullName>West-ACQ-BOT</fullName>
                </value>
                <value>
                    <fullName>CME</fullName>
                </value>
                <value>
                    <fullName>East-C&amp;P</fullName>
                </value>
                <value>
                    <fullName>East-SMB</fullName>
                </value>
                <value>
                    <fullName>East-SMB-BOT</fullName>
                </value>
                <value>
                    <fullName>East-C&amp;P-BOT</fullName>
                </value>
                <value>
                    <fullName>East-SMB-ISR</fullName>
                </value>
                <value>
                    <fullName>East-SMB-BOT-ISR</fullName>
                </value>
                <value>
                    <fullName>FSI</fullName>
                </value>
                <value>
                    <fullName>GPC</fullName>
                </value>
                <value>
                    <fullName>Gpcomm</fullName>
                </value>
                <value>
                    <fullName>GpComm-BOT</fullName>
                </value>
                <value>
                    <fullName>H3C</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Inactive-BOT</fullName>
                </value>
                <value>
                    <fullName>Inactive-GPC</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Non-Named</fullName>
                </value>
                <value>
                    <fullName>Non-Named-BOT</fullName>
                </value>
                <value>
                    <fullName>North-C&amp;P</fullName>
                </value>
                <value>
                    <fullName>North-SMB</fullName>
                </value>
                <value>
                    <fullName>North-C&amp;P-BOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>Legacy-Backlog</fullName>
                </value>
                <value>
                    <fullName>Requested by Sales</fullName>
                </value>
                <value>
                    <fullName>Requested by Marketing</fullName>
                </value>
                <value>
                    <fullName>Converted from Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domestic_DUNS__c</fullName>
        <label>Domestic DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Chengdu</fullName>
                </value>
                <value>
                    <fullName>Guangzhou</fullName>
                </value>
                <value>
                    <fullName>Nanjing</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Shenyang</fullName>
                </value>
                <value>
                    <fullName>Shenzhen</fullName>
                </value>
                <value>
                    <fullName>Wuhan</fullName>
                </value>
                <value>
                    <fullName>Xian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Account__c</fullName>
        <label>Global Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_DUNS__c</fullName>
        <label>Global DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP_SFDC_ID__c</fullName>
        <externalId>true</externalId>
        <label>HP SFDC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPMS_BUs__c</fullName>
        <label>IPMS BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDuplicateData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDuplicateData</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L1_Account__c</fullName>
        <label>L1 Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1_English_Account__c</fullName>
        <label>L1 English Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By_Case__c</fullName>
        <label>Last Updated By Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locator_ID_TJ__c</fullName>
        <label>Locator ID TJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locator_ID__c</fullName>
        <label>Locator ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDCP_Business_Relationship_ID__c</fullName>
        <label>MDCP Business Relationship ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDCP_Organization_ID__c</fullName>
        <label>MDCP Organization ID</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDCP_Site_ID__c</fullName>
        <label>MDCP Site ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDCP_Site_Instance_ID__c</fullName>
        <label>MDCP Site Instance ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <label>Membership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-GP/PP</fullName>
                </value>
                <value>
                    <fullName>Gold Partner</fullName>
                </value>
                <value>
                    <fullName>Platinum Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OPC_Number_TJ__c</fullName>
        <label>OPC Number TJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPC_Number__c</fullName>
        <label>OPC Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_ID__c</fullName>
        <label>Oracle ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_DUNS_Number__c</fullName>
        <label>Organization DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oversea_Country__c</fullName>
        <label>Oversea Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Countrys</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRM_Partner_ID__c</fullName>
        <label>PRM Partner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Status__c</fullName>
        <label>Partner Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Business_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Business Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anhui</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Chongqing</fullName>
                </value>
                <value>
                    <fullName>Fujian</fullName>
                </value>
                <value>
                    <fullName>Gansu</fullName>
                </value>
                <value>
                    <fullName>Guangdong</fullName>
                </value>
                <value>
                    <fullName>Guangxi</fullName>
                </value>
                <value>
                    <fullName>Guizhou</fullName>
                </value>
                <value>
                    <fullName>Hainan</fullName>
                </value>
                <value>
                    <fullName>Hebei</fullName>
                </value>
                <value>
                    <fullName>Heilongjiang</fullName>
                </value>
                <value>
                    <fullName>Henan</fullName>
                </value>
                <value>
                    <fullName>Hongkong</fullName>
                </value>
                <value>
                    <fullName>Hubei</fullName>
                </value>
                <value>
                    <fullName>Hunan</fullName>
                </value>
                <value>
                    <fullName>Jiangsu</fullName>
                </value>
                <value>
                    <fullName>Jiangxi</fullName>
                </value>
                <value>
                    <fullName>Jilin</fullName>
                </value>
                <value>
                    <fullName>Liaoning</fullName>
                </value>
                <value>
                    <fullName>Macao</fullName>
                </value>
                <value>
                    <fullName>Neimenggu</fullName>
                </value>
                <value>
                    <fullName>Ningxia</fullName>
                </value>
                <value>
                    <fullName>Qinghai</fullName>
                </value>
                <value>
                    <fullName>Shaanxi</fullName>
                </value>
                <value>
                    <fullName>Shandong</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Shanxi</fullName>
                </value>
                <value>
                    <fullName>Shenzhen</fullName>
                </value>
                <value>
                    <fullName>Sichuan</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPL_Status__c</fullName>
        <label>RPL Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Regions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SU__c</fullName>
        <label>SU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACQ</fullName>
                </value>
                <value>
                    <fullName>CME</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>FSI</fullName>
                </value>
                <value>
                    <fullName>GPC</fullName>
                </value>
                <value>
                    <fullName>GpComm</fullName>
                </value>
                <value>
                    <fullName>H3C</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Non-Named</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>CME-MTUM</fullName>
                </value>
                <value>
                    <fullName>CME-Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_DUNS__c</fullName>
        <label>Site DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_Account_ID__c</fullName>
        <label>Source System Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubSU__c</fullName>
        <label>SubSU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Require Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>移动</fullName>
                </value>
                <value>
                    <fullName>华为</fullName>
                </value>
                <value>
                    <fullName>中兴</fullName>
                </value>
                <value>
                    <fullName>中国电信</fullName>
                </value>
                <value>
                    <fullName>联通</fullName>
                </value>
                <value>
                    <fullName>NEP</fullName>
                </value>
                <value>
                    <fullName>铁通</fullName>
                </value>
                <value>
                    <fullName>网通</fullName>
                </value>
                <value>
                    <fullName>UT-斯达康</fullName>
                </value>
                <value>
                    <fullName>卫通</fullName>
                </value>
                <value>
                    <fullName>互联网</fullName>
                </value>
                <value>
                    <fullName>其它电信</fullName>
                </value>
                <value>
                    <fullName>电力</fullName>
                </value>
                <value>
                    <fullName>公用事业局</fullName>
                </value>
                <value>
                    <fullName>水厂</fullName>
                </value>
                <value>
                    <fullName>煤气</fullName>
                </value>
                <value>
                    <fullName>国资委企业</fullName>
                </value>
                <value>
                    <fullName>保险</fullName>
                </value>
                <value>
                    <fullName>民航</fullName>
                </value>
                <value>
                    <fullName>地铁/轻轨</fullName>
                </value>
                <value>
                    <fullName>铁道</fullName>
                </value>
                <value>
                    <fullName>高速路</fullName>
                </value>
                <value>
                    <fullName>港口</fullName>
                </value>
                <value>
                    <fullName>远洋</fullName>
                </value>
                <value>
                    <fullName>机场</fullName>
                </value>
                <value>
                    <fullName>水运</fullName>
                </value>
                <value>
                    <fullName>客运</fullName>
                </value>
                <value>
                    <fullName>空管</fullName>
                </value>
                <value>
                    <fullName>中科院</fullName>
                </value>
                <value>
                    <fullName>高校(211)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>CSC_FST_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CSC_FST_Service_Account</value>
        </filters>
        <label>CSC&amp; FST Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Distributor</fullName>
        <columns>Account_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Business_Type__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Distributor</value>
        </filters>
        <label>IPMS Distributor</label>
    </listViews>
    <listViews>
        <fullName>IPMS_Accounts</fullName>
        <columns>Account_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Business_Type__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.End_User</value>
        </filters>
        <label>IPMS Account</label>
    </listViews>
    <listViews>
        <fullName>IPMS_Reseller</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Reseller</value>
        </filters>
        <label>IPMS Reseller</label>
    </listViews>
    <recordTypes>
        <fullName>CSC_FST_Service_Account</fullName>
        <active>true</active>
        <label>CSC &amp; FST Service Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distributor</fullName>
        <active>true</active>
        <label>Distributor</label>
    </recordTypes>
    <recordTypes>
        <fullName>End_User</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reseller</fullName>
        <active>true</active>
        <label>Reseller</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>IPMS_Account_Region_Country</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR( RecordType.DeveloperName  = &apos;End_User&apos;,RecordType.DeveloperName  = &apos;Distributor&apos;,RecordType.DeveloperName  = &apos;Reseller&apos;) ,   OR(ISBLANK(TEXT(Region__c)), ISBLANK(TEXT(Oversea_Country__c))))</errorConditionFormula>
        <errorMessage>Region and Oversea Country can not empty on account.</errorMessage>
    </validationRules>
</CustomObject>